deployments/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-fastapi-app-deployment
  labels:
    team: dev1
spec:
  replicas: 3
  selector:
    matchLabels:
      app: sample-fastapi-app
  template:
    metadata:
      labels:
        app: sample-fastapi-app
    spec:
      containers:
        - image: papunmohanty/sample-fastapi-app:latest
          name: sample-fastapi-app-container
          ports:
            - containerPort: 8000
