deployments/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-fastapi-app-service
spec:
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: 8000
  selector:
    app: sample-fastapi-app
