deployments/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-fastapi-app-ingress
spec:
  ingressClassName: "nginx"
  rules:
    - host: dragoon.local
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: sample-fastapi-app-service
                port:
                  number: 8000
